tests/error/type_match/tuple_mismatched_element_count1.bz
function test()
{
	let _: [int32, int32] = [ 0, 0, 0 ];
}
